2014-03-17  Anton Kolesov  <anton.kolesov@synposys.com>

	* arc-versions.sh: Bump to Linux branch arc-3.13.

2014-03-17  Anton Kolesov  <anton.kolesov@synopsys.com>

	* build-all.sh: Add option --release-name. Default to GCC Git revision.
	* build-elf32.sh: Change compiler version string, use RELEASE_NAME
	variable supplied from build-all.sh
	* build-uclibc.sh: Likewise.

2014-02-07  Anton Kolesov  <anton.kolesov@synopsys.com>

	* build-uclibc.sh: Build gdbserver with -O3 instead of -O0, use
	CFLAGS_FOR_TARGET properly for gdbserver.

2014-01-28  Anton Kolesov  <anton.kolesov@synopsys.com>

	* build-all.sh: Replace --isa-* options with --cpu option.
	* build-uclibc.sh: Update commentary, only arc700 and HS are
	supported.

2014-01-13  Anton Kolesov  <anton.kolesov@synopsys.com>

	* dejagnu/mdbsim.sh: Remove file, because it is useless now
	* dejagnu/baseboards/arc-sim-mdb-.exp: Rename to...
	* dejagnu/baseboards/arc-sim-nsimdrv.exp: ... this. Also invoke
	nsimdrv application directly, instead of using custom wrapper script
	and MDB.

2014-01-05  Anton Kolesov  <anton.kolesov@synopsys.com>

	* arc-external.sh: Update versions: GMP 4.3.2 -> 5.1.3,
	MPFR 2.4.2 -> 3.1.2.

2014-01-03  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* rel-rpaths.sh: Fixed remaining bash specific constructs which
	upset dash.

2014-01-03  Vineet Gupta <vgupta@synopsys.com>

	* rel-paths.sh: Make rel-rpath.sh future safe (RPATH vs. RUNPATH).

2014-01-03  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* arc-clone-all.sh: Remove bash specific constructs.
	* arc-init.sh: Likewise.
	* build-uclibc.sh: Likewise.
	* get-random-port.sh: Likewise.
	* rel-rpaths.sh: Likewise.
	* run-elf32-tests.sh: Likewise.
	* run-uclibc-tests.sh: Likewise.
	* tag-release.sh: Likewise.

2013-12-24  Anton Kolesov  <anton.kolesov@synopsys.com>

	* run-tests.sh: Add hostlink library option.
	* dejagnu/mdbsim.sh: New file, shell wrapper around mdb.
	* dejagnu/baseboards/arc-sim-mdb.exp: New file, board definition to